Fix blocking alignment

--- a/app/styles/pages/_settings.scss
+++ b/app/styles/pages/_settings.scss
@@ -128,6 +128,9 @@
     position: relative;
     top: 3px;
     right: -5px;
+    @media (max-width: 554px) {
+      right: 15px;
+    }
   }
 }
 .notification-settings--item {
